--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"predict": "node predict.js",
-		"train": "node train.js"
+		"predict": "node ./src/predict.js",
+		"train": "node ./src/train.js",
+		"bonus": "webpack serve --hot"
 	},
 	"repository": {
 		"type": "git",
@@ -18,6 +19,30 @@
 	},
 	"homepage": "https://github.com/woolimi/ft_linear_regression#readme",
 	"dependencies": {
-		"csv-parser": "^2.3.3"
+		"csv-parser": "^2.3.3",
+		"plotly.js": "^1.57.1",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-plotly.js": "^2.5.0",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-react": "^2.0.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.7",
+		"@babel/plugin-proposal-class-properties": "^7.12.1",
+		"@babel/preset-env": "^7.12.7",
+		"@babel/preset-react": "^7.12.7",
+		"babel-loader": "^8.2.1",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^5.0.1",
+		"csv-loader": "^3.0.3",
+		"error-overlay-webpack-plugin": "^0.4.1",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^4.5.0",
+		"style-loader": "^2.0.0",
+		"url-loader": "^4.1.1",
+		"webpack": "^5.6.0",
+		"webpack-cli": "^4.2.0",
+		"webpack-dev-server": "^3.11.0"
 	}
 }
